# pytoma

./: README.md  pyproject.toml
pytoma/: base.py  cli.py  collect.py  config.py  core.py  edits.py  fs.py  ir.py  markers.py  policies.py  pre_resolution.py  render.py  scan.py
pytoma/engines/: markdown_engine.py  markdown_min.py  python_engine.py  python_min.py  toml_engine.py  toml_min.py
tests/: test_collect_qualnames.py  test_destructive_render_core.py  test_edits_merge.py  test_file_no_imports.py  test_markdown_engine.py  test_markdown_min.py  test_python_engine.py  test_rule_preresolve.py  test_toml_min.py
