[project]
name = "pytoma"
version = "0.0.1"
description = "Destructive code folding to craft compact prompts."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Nathan Palluau", email="nathan.palluau@gmail.com"}]
license = {text = "MIT"}
classifiers = ["Development Status :: 3 - Alpha"]

[project.urls]
Homepage = "https://github.com/nathanap2/pytoma"

[project.scripts]
pytoma = "pytoma.cli:main"

